plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.4'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'org.example'
def getIncrementedVersion() {
    def versionFile = file('version.properties')
    if (!versionFile.exists()) {
        versionFile.text = "build=1"
    }

    def properties = new Properties()
    versionFile.withInputStream { properties.load(it) }
    def currentBuild = properties.build.toInteger()

    properties.build = (currentBuild + 1).toString()
    versionFile.withOutputStream { properties.store(it, null) }

    return "0.0.${currentBuild}-SNAPSHOT"
}

version = getIncrementedVersion()

java {
    sourceCompatibility = '21'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation('org.springframework.boot:spring-boot-starter-data-jpa:3.3.1') {
        exclude group: 'org.hibernate.orm', module: 'hibernate-core'
    }
    implementation 'org.hibernate.orm:hibernate-core:6.5.2.Final'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
    implementation group: 'net.sf.jasperreports', name: 'jasperreports', version: '6.21.3'
    implementation 'commons-codec:commons-codec:1.18.0'
    implementation 'org.springframework.boot:spring-boot-starter-graphql'
    testImplementation 'org.springframework.graphql:spring-graphql-test'
    testImplementation 'org.springframework:spring-webflux'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.12.5'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.12.5'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.12.5'
    runtimeOnly 'com.mysql:mysql-connector-j'
}

tasks.named('test') {
    useJUnitPlatform()
}
